@@ -4,6 +4,10 @@
 // and copies them into sql database.
 // In environments with replicated database it is possible
 // to use memcache as a fallback when write-master is unavailable.
+// ------------------------------------------------------------
+// WARNING: Remember to also set memcache_max_allowed_packet in
+//          config to match with expected max attachment size.
+// ------------------------------------------------------------
 $config['redundant_attachments_memcache'] = false;
 
 // Attachment data expires after specified TTL time in seconds (max.2592000).
